<resources>
    <string name="asset_statements" translatable="false">[{ \"include\": \"https://chat.blml.app/.well-known/assetlinks.json\" }]</string>
    <string name="tinode_url" translatable="false">https://blml.app</string>
    <string name="emulator_host_name" translatable="false">10.0.2.2:6060</string>
    <string name="contact_us_uri" translatable="false">mailto:support@blml.app</string>
    <string name="terms_of_use_uri" translatable="false">https://hungngo.net/blml/terms</string>
    <string name="privacy_policy_uri" translatable="false">https://chat.blml.app/privacy</string>
    <string name="app_name" translatable="false">BLML</string>
    <string name="chats_title">Chats</string>
    <string name="app_name_full" translatable="false">BLML</string>
    <string name="copyright" translatable="false">© 2026 BLML</string>
    <string name="tinode" translatable="false">BLML</string>
    <string name="app_version">Version</string>
    <string name="login_hint">User name</string>
    <string name="password_hint">Password</string>
    <string name="new_message_hint">New message</string>
    <string name="send_message_button_hint">Send message</string>
    <string name="send_image_button_hint">Send image</string>
    <string name="send_file_button_hint">Send file</string>
    <string name="sign_in">Sign In</string>
    <string name="app_description" translatable="false">Welcome to BLML</string>
    <string name="action_signup">Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_new">User name</string>
    <string name="password_new">Password</string>
    <string name="full_name">Full name, e.g. John Doe</string>
    <string name="tinode_logo" translatable="false">BLML Logo</string>
    <string name="action_cancel">Cancel</string>
    <string name="settings_host_name">Server address</string>
    <string name="settings_use_tls">Use secure connection</string>
    <string name="settings_tls_explained">Encrypt connection to server</string>
    <string name="settings_host_name_explained">Connecting to \'%1$s\'</string>
    <string name="modeReadOnly">read-only</string>
    <string name="modeAdmin">admin</string>
    <string name="modeOwner">owner</string>
    <string name="modeBlocked">blocked</string>
    <string name="modeInvited">invited</string>
    <string name="modeRequested">requested</string>
    <string name="modePending">pending</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_mute">Mute conversation</string>
    <string name="action_unmute">Unmute conversation</string>
    <string name="action_clear_messages">Clear all messages</string>
    <string name="action_new_chat">New chat</string>
    <string name="action_about">About</string>
    <string name="action_search">Search</string>
    <string name="action_add_contact">Add contact</string>
    <string name="action_send_now">Send now</string>
    <string name="action_view_details">View details</string>
    <string name="action_copy">Copy</string>
    <string name="action_offline">Working offline</string>
    <string name="action_delete_group">Delete conversation…</string>
    <string name="action_leave_topic">Leave conversation…</string>
    <string name="action_video_call">Video call</string>
    <string name="avatar">Avatar picture</string>
    <string name="image_is_unavailable">Image is unavailable</string>
    <string name="error_login_failed">Login failed</string>
    <string name="error_wrong_login">Wrong user name or password.</string>
    <string name="login_required">Login required</string>
    <string name="password_required">Password required</string>
    <string name="error_invite_code_invalid">Sign-up needs a valid invite code. Ask whoever invited you for the current one.</string>
    <string name="error_new_account_failed">Account registration failed:</string>
    <string name="no_chats">You have no chats\n\n¯\\_(ツ)_/¯</string>
    <string name="no_blocked_contacts">No blocked contacts</string>
    <string name="alphabet">\ ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="tinode_invite_subject">Check out BLML</string>
    <string name="tinode_invite_body">Check out BLML. Download it from https://blml.app</string>
    <string name="profile_action">BLML profile</string>
    <string name="view_profile">View Profile</string>
    <string name="tinode_message">Send BLML message</string>
    <string name="hint_topic_title">Name of the group</string>
    <string name="group_members">Group Members</string>
    <string name="name_required">Group name required</string>
    <string name="no_members">No group members</string>
    <string name="add_one_member">Add at least one group member</string>
    <string name="add_members">Add members</string>
    <string name="id">ID:</string>
    <string name="topic_muted">Muted</string>
    <string name="permissions">Permissions</string>
    <string name="your_permissions">Yours</string>
    <string name="no_connection">You are offline</string>
    <string name="action_failed">Action failed</string>
    <string name="placeholder_contact_title">Unnamed or unknown</string>
    <string name="placeholder_topic_title">Unnamed</string>
    <string name="placeholder_private">Private notes</string>
    <string name="options_menu">Options menu</string>
    <string name="current_user">You</string>
    <string name="default_permissions">Default permissions</string>
    <string name="auth_permissions">Authenticated users</string>
    <string name="anon_permissions">Anonymous users</string>
    <string name="topic_private">Additional info (visible to you only)</string>
    <string name="edit_permissions">Edit Permissions</string>
    <string name="permission_owner">Full control (owner)</string>
    <string name="permission_join">Join</string>
    <string name="permission_read">Read</string>
    <string name="permission_write">Write</string>
    <string name="permission_approve">Approve new members</string>
    <string name="permission_share">Invite new members</string>
    <string name="permission_notifications">Receive notifications</string>
    <string name="permission_delete">Delete messages</string>
    <string name="send_message">Send message</string>
    <string name="change_permissions">Change permissions</string>
    <string name="make_owner">Make owner</string>
    <string name="remove_from_group">Remove</string>
    <string name="block">Block</string>
    <string name="confirm_member_removal">Remove %1$s from \"%2$s\"?</string>
    <string name="confirm_member_ban">Remove and ban %1$s from \"%2$s\"?</string>
    <string name="confirm_leave_topic">Do you really want to leave this conversation?</string>
    <string name="confirm_delete_topic">Do you really want to delete this conversation for everyone?</string>
    <string name="confirm_delete_multiple_topics">Do you really want to delete these chats?</string>
    <string name="modeWriteOnly">write-only</string>
    <string name="read_receipts_enabled">Send read receipts</string>
    <string name="typing_notifications_enabled">Show typing notifications</string>
    <string name="logout">Logout</string>
    <string name="change_password">Change password</string>
    <string name="account_settings">Account settings</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="confirm_logout">Are you sure you want to logout?</string>
    <string name="invalid_login">Login is invalid</string>
    <string name="default_attachment_name" translatable="false">file_attachment</string>
    <string name="download_attachment">save</string>
    <string name="broken_image">Unknown or invalid image format</string>
    <string name="attachment_too_large">The file size %1$s exceeds the %2$s limit.</string>
    <string name="failed_to_download">Failed to download the file</string>
    <string name="failed_to_save_download">Failed to save downloaded file</string>
    <string name="failed_to_open_file">No application can view the file of this type</string>
    <string name="failed_empty_password">Not changed: empty password</string>
    <string name="failed_credential_confirmation">Incorrect confirmation code</string>
    <string name="contacts_section_contacts">Phone Contacts</string>
    <string name="contacts_section_directory">Directory</string>
    <string name="email">Email</string>
    <string name="email_required">Email required</string>
    <string name="confirm">Confirm</string>
    <string name="validation_example">Numbers only</string>
    <string name="enter_confirmation_code">Enter confirmation code</string>
    <string name="hint_add_by_id">Enter ID of a group or user</string>
    <string name="hint_search_tags">Search by tags</string>
    <string name="topic_not_found_or_invalid">Conversation not found or invalid</string>
    <string name="sending_disabled">Not available</string>
    <string name="download_title">BLML download</string>
    <string name="some_permissions_missing">Please grant all requested permissions.</string>
    <string name="unable_to_attach_file">Unable to attach this file</string>
    <string name="canceled">canceled</string>
    <string name="login_rejected">Login rejected</string>
    <string name="email_rejected">Email rejected</string>
    <string name="invalid_confirmation_code">Invalid code</string>
    <string name="new_message_channel_name">New message</string>
    <string name="new_message">New message</string>
    <string name="new_message_channel_description">New message was received</string>
    <string name="request_pass_reset_title">Password reset</string>
    <string name="request">Request</string>
    <string name="forgot_password">Forgot password</string>
    <string name="invalid_or_unknown_credential">Invalid or unknown address</string>
    <string name="user_not_found">Not found</string>
    <string name="topic_tags">Tags, comma separated list</string>
    <string name="sender_unknown">Unknown</string>
    <string name="action_archive">Archive</string>
    <string name="archived_chats">Archived Chats</string>
    <string name="action_show_archive">Archived chats</string>
    <string name="request_new_chat_title">New Chat</string>
    <string name="request_new_chat_message">You are invited to start a new chat. What would you like to do?</string>
    <string name="new_chat_accept">Accept</string>
    <string name="new_chat_ignore">Ignore</string>
    <string name="new_chat_block">Block</string>
    <string name="new_chat">New chat</string>
    <string name="messages_not_readable">No access to new messages</string>
    <string name="deleted">deleted</string>
    <string name="peers_messaging_disabled">Peer\'s messaging is disabled</string>
    <string name="action_enable">Enable</string>
    <string name="image_caption_hint">Image caption</string>
    <string name="accept_avatar_button_hint">Accept avatar</string>
    <string name="action_save">Save</string>
    <string name="action_share">Share</string>
    <string name="chat_request_incoming">%1$s wants to chat with you</string>
    <string name="chat_request_incoming_note">They can\'t message you until you accept. Declining doesn\'t tell them.</string>
    <string name="chat_request_accept">Accept</string>
    <string name="chat_request_decline">Decline</string>
    <string name="action_back">Back</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="action_add_friend">Add friend</string>
    <string name="action_create_group">Create group</string>
    <string name="add_by_phone">Add by phone number</string>
    <string name="by_email">By email</string>
    <string name="hint_phone_number">Phone number</string>
    <string name="hint_email">Email address</string>
    <string name="people_you_may_know">People you may know</string>
    <string name="my_qr_caption">Scan this code to chat with me on BLML</string>
</resources>