<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/offline"
        android:visible="false">
        <item
            android:id="@+id/action_offline"
            android:orderInCategory="10"
            android:title="@string/action_offline"
            android:icon="@drawable/ic_offline"
            app:showAsAction="always"
            tools:ignore="AlwaysShowAction" />
    </group>

    <group android:id="@+id/not_archive">
        <!-- Zalo-style top bar: QR scan plus an "add" dropdown. The submenu is
             the place new entries slot into as the app grows. -->
        <item
            android:id="@+id/action_scan_qr"
            android:orderInCategory="90"
            android:title="@string/scan_qr_code"
            android:icon="@drawable/ic_qr_code"
            app:showAsAction="always" />

        <item
            android:id="@+id/action_add_menu"
            android:orderInCategory="91"
            android:title="@string/action_add_friend"
            android:icon="@drawable/ic_add_plain"
            app:showAsAction="always">
            <menu>
                <item
                    android:id="@+id/action_add_friend"
                    android:title="@string/action_add_friend"
                    android:icon="@drawable/ic_person_add" />
                <item
                    android:id="@+id/action_create_group"
                    android:title="@string/action_create_group"
                    android:icon="@drawable/ic_group_2" />
            </menu>
        </item>

        <item
            android:id="@+id/action_show_archive"
            android:orderInCategory="101"
            android:title="@string/action_show_archive"
            android:icon="@drawable/ic_filecab"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_settings"
            android:orderInCategory="102"
            android:title="@string/action_settings"
            android:icon="@drawable/ic_settings"
            app:showAsAction="never" />
    </group>

</menu>