<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/message_view_bkg"
    android:orientation="vertical">

    <co.tinode.tindroid.widgets.OverlaidImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/metaPanel"
        android:adjustViewBounds="true"
        android:contentDescription=""
        android:scaleType="matrix"
        tools:ignore="ContentDescription"
        tools:src="@drawable/logo_src"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/metaPanel"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="4dp"
        card_view:cardBackgroundColor="?android:colorBackground"
        card_view:cardUseCompatPadding="true"
        card_view:cardElevation="@dimen/cardview_elevation">

        <LinearLayout
            android:id="@+id/sendImagePanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6sp"
            android:visibility="visible"
            tools:ignore="RtlSymmetry">

            <EditText
                android:id="@+id/editMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/image_caption_hint"
                android:imeOptions="actionSend"
                android:textColor="?android:attr/textColorPrimary"
                android:inputType="textMultiLine|textCapSentences"
                android:maxLines="3"
                android:importantForAutofill="no" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/chatSendButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/send_message_button_hint"
                android:paddingStart="4sp"
                android:paddingEnd="8sp"
                android:layout_gravity="center_vertical"
                app:tint="?attr/colorAccent"
                app:srcCompat="@drawable/ic_send"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <include
        layout="@layout/media_viewer_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/acceptAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:clickable="true"
        android:focusable="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        android:contentDescription="@string/accept_avatar_button_hint"
        app:backgroundTint="@color/button_background"
        app:elevation="@dimen/fab_elevation"
        app:borderWidth="0dp"
        app:srcCompat="@drawable/ic_check"/>

</RelativeLayout>
